# rembg

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
functions/: rembg.fish
rembg/: cli.py
rembg/pipeline/: logger.py  pipeline.py
rembg/pipeline/stages/: __init__.py  s1_background.py  s2_sprite.py  s3_refinement.py  s4_cleanup.py
src/: remove-bg-aggressive.py  remove-bg-hardened.py  remove-bg-pipeline.py  remove-bg.py
src/pipeline/: __init__.py  config.py
